# minds_iolite

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: blog.md
src/: App.vue  index.css  main.ts  output.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: setup.rs
src-tauri/src/commands/: process.rs
src/api/: data.ts  finance.ts  member.ts
src/app/: window-manager.ts
src/assets/: designer-theme.css  imageImports.ts
src/components/: Greet.vue  HeaderButton.vue  MemberDialog.vue  SearchBar.vue  Table.vue  hdScroll.vue
src/components/charts/: BasicPieChart.vue  (+3 more)
src/data/: componentLibrary.ts
src/hooks/: useApp.ts
src/layouts/: ContentLayout.vue  HeaderLayout.vue  LayoutHub.vue  SidebarLayout.vue  SidebarLayout1.vue
src/router/: index.ts
src/services/: ProjectGenerator.ts  chatService.ts  databaseService.ts  publishedPagesService.ts  sessionStore.ts
src/stores/: chatStore.ts  designerStore.ts  messageStore.ts
src/types/: chat.ts  designer.ts  import.ts  information.ts
src/utils/: componentUtils.ts  initApp.ts
src/views/: 123.vue  AgentView.vue  ChartsDemo.vue  ChartsView.vue  Dashboard.vue  ImportView.vue  InfoChartsView.vue  InformationView.vue  PersonInformation.vue  PublishedPageRenderer.vue  SignUpView.vue  Test01.vue  Test02.vue
测试/: README.md  package.json  vite.config.js
测试/public/: index.html
(+92 files in other folders)
